Corrections contrastes

--- a/optimize/style.css
+++ b/optimize/style.css
@@ -90,8 +90,28 @@ a:hover {
     right: 0;
 }
 
+
+.bloc-size {
+    width: 80%;
+    margin: auto;
+}
+.tangerine-background {
+    background-color: #F3976C;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.btn-tangerine {
+    background: #333333!important;
+    color: #F3976C!important;
+
+}
+
+.contrast {
+    color: #333333!important;
+}
+
+
 .texture-paper::before {
-    background: url("img/texture-paper.png");
     background-size: 280px 280px;
 }
 
@@ -123,7 +143,7 @@ a:hover {
 .d-bloc .navbar a,
 .d-bloc .navbar-brand,
 .d-bloc a .icon-sm,
-.d-bloc a .icon-md,
+.d-bloc a,
 .d-bloc a .icon-lg,
 .d-bloc a .icon-xl,
 .d-bloc h1 a,
@@ -134,6 +154,10 @@ a:hover {
 .d-bloc h6 a,
 .d-bloc p a {
     color: rgba(255, 255, 255, .6);
+}
+
+ .icon-md {
+    color: rgba(0, 0, 0, .7);
 }
 
 .d-bloc .a-btn:hover,
@@ -704,7 +728,7 @@ p {
     max-width: 400px;
     margin: auto auto auto auto;
     padding: 10px;
-    color: #FFFFFF!important;
+    color: #333333!important;
 }
 
 h2 {
@@ -739,7 +763,7 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #333333!important;
     font-family: sans-serif;
 }
 
@@ -757,7 +781,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(100, 86, 63, 0.7);
+    background-color: #F3976C;
     padding: 40px 40px 40px 40px;
 }
 
@@ -775,16 +799,17 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #99350A;
+    background-color: #F3976C;
 }
 
 .tc-white {
-    color: #FFFFFF!important;
+    color: #333333!important;
 }
 
+
 .btn-atomic-tangerine {
-    background: #99350A;
-    color: #FFFFFF!important;
+    background: #F3976C;
+    color: #333333!important;
 }
 
 .btn-atomic-tangerine:hover {
@@ -813,9 +838,7 @@ h4 {
     border-color: #364577!important;
 }
 
-.bg-dots-bg {
-    background-image: url("img/dots-bg.png");
-}
+²
 
 .bg-lines-h2-bg {
     background-image: url("img/lines-h2-bg.png");
